Fix dark mode

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,6 +4,9 @@ html,
 body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color-scheme: dark;
+  color: $color-text;
+  background: $color-background;
 }
 
 a {
@@ -13,14 +16,4 @@ a {
 
 * {
   box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: $color-text;
-    background: $color-background;
-  }
 }
